--- a/blog.html
+++ b/blog.html
@@ -1,59 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" itemscope itemtype="https://schema.org/Article">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical" href="https://www.tooplate.com/live/2126-antique-cafe" />
-    <title>Antique Cafe - Live View</title>
-    <meta name="description" content="Live viewing of Antique Cafe HTML CSS template - Tooplate.com">
-    <meta name="author" content="tooplate">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.icon" />
-    <link href="/css/tooplate-all-20210722.css" rel="stylesheet">
-    <link href="/tooplate-style-20210907.css" rel="stylesheet">
-    
-        <script src="/cmp.js"></script>
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
-      <script src="js/respond.min.js"></script>
-    <![endif]-->
-    <!--<script data-ad-client="ca-pub-4847506191651249" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
-
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-732601-15"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-732601-15');
-</script>
-        <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-  <script>
-  window.googletag = window.googletag || {cmd: []};
-        googletag.cmd.push(function() {
-          var interstitialSlot = googletag.defineOutOfPageSlot('/147246189,22381294811/tooplate.com_interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);
-          if (interstitialSlot) interstitialSlot.addService(googletag.pubads());
-          googletag.pubads().enableSingleRequest();
-          googletag.enableServices();
-          googletag.display(interstitialSlot);
-      });
-</script>
-        <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5bd821e07a0efc00111a3c49&product=inline-share-buttons' async='async'></script>
-  </head>
-
-  <body>
-        <div id="live-view">
-	<iframe style="display: block; position: absolute; width: 100%; height: 100%;" width="100%" height="100%" frameborder="0" src="https://www.tooplate.com/templates/2126_antique_cafe"></iframe>
-</div>    
-<iframe id="tooplate.com_970x90_anchor_DFP" frameborder="0" scrolling="no" marginheight="0"
-        marginwidth="0" topmargin="0" leftmargin="0" width="1" height="1"></iframe>
-<script>
-    (function () {
-        var size='970x90|320x100',
-            adunit = 'tooplate.com_970x90_anchor_DFP',
-            childNetworkId = '22381294811',
-            xmlhttp = new XMLHttpRequest();xmlhttp.onreadystatechange = function(){if(xmlhttp.readyState==4 && xmlhttp.status==200){var iframe=document.getElementById(adunit).contentWindow.document;iframe.open();iframe.write(xmlhttp.responseText);iframe.close();}};var child=childNetworkId.trim()?','+childNetworkId.trim():'';xmlhttp.open("GET", 'https://pubads.g.doubleclick.net/gampad/adx?iu=/147246189'+child+'/'+adunit+'&sz='+encodeURI(size)+'&t=Placement_type%3Dserving&'+Date.now(), true);xmlhttp.send();})();
-</script>
-  </body>
+<html>
+	<body>
+		<h1> Blog </h1>
+		<p> A record of our adventures building our homestead and living in the OSR Coop Community </p>
+		
+	</body>
 </html>
+
